upd: last update presentation

--- a/Present/index.html
+++ b/Present/index.html
@@ -74,6 +74,11 @@
 				</div>
 			</section>
 			<section>
+				<div class="architecture">
+					<img style="height: 85vh;" src="examples/assets/arch.png" alt="arch">
+				</div>
+			</section>
+			<section>
 				<div class="racimatrix">
 					<span class="racimatrix-tittle">RACI матрица</span>
 					<table style="width:100%">
